.happypack/s--1852978076
SyntaxError: Unexpected token, expected , (92:38)

[0m [90m 90 | [39m        [36mvar[39m obj [33m=[39m [36mthis[39m[33m.[39mprops[33m.[39mcomplete[key][33m;[39m
 [90m 91 | [39m        [36mif[39m ([36mtypeof[39m [36mthis[39m[33m.[39mprops[33m.[39mcomplete[key] [33m===[39m [32m'object'[39m) {
[31m[1m>[22m[39m[90m 92 | [39m          console[33m.[39mlog([32m'obj->'[39m[33m,[39m [32m'key:'[39m key [33m+[39m [32m' -> '[39m[33m+[39m obj)[33m;[39m
 [90m    | [39m                                      [31m[1m^[22m[39m
 [90m 93 | [39m        }
 [90m 94 | [39m
 [90m 95 | [39m      }[0m

Error
    at transpile (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/babel-loader/lib/index.js:63:13)
    at Object.module.exports (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/babel-loader/lib/index.js:163:20)
    at applySyncOrAsync (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:341:21)
    at apply (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:268:5)
    at /home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:131:7
    at applyPitchLoader (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:184:14)
    at applyPitchLoader (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:192:14)
    at applyPitchLoaders (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:222:4)
    at applyLoaders (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:116:3)
    at HappyWorker.compile (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/HappyWorker.js:32:3)
    at Object.compile (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/HappyForegroundThreadPool.js:61:14)
    at HappyPlugin.compileAndUpdateCache (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/HappyPlugin.js:344:14)
    at HappyPlugin.compileInForeground (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/HappyPlugin.js:321:25)
    at HappyPlugin.compile (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/HappyPlugin.js:237:32)
    at Object.HappyLoader (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/HappyLoader.js:42:15)
    at LOADER_EXECUTION (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/loader-runner/lib/LoaderRunner.js:119:14)